<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000">

    <Button
        android:id="@+id/btnNextFromStartRound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="16dp"
        android:text="@string/next"
        android:backgroundTint="#4e0707"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnBackFromStartRound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginBottom="16dp"
        android:text="@string/back"
        android:backgroundTint="#4e0707"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvRoundTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/round_n"
        android:textColor="#ffffff"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSetNSpies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="80dp"
        android:text="@string/set_n_spies"
        android:textColor="#ffffff"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRoundTitle" />

    <TextView
        android:id="@+id/tvSetNSPiesHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/set_n_spies_hint"
        android:textColor="#ffffff"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSetNSpies" />

    <LinearLayout
        android:id="@+id/llNSpies"
        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSetNSPiesHint">

        <ImageView
            android:id="@+id/ivLeft"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_left_foreground" />

        <TextView
            android:id="@+id/etNSpies"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ems="1"
            android:text="1"
            android:gravity="center"
            android:textColor="#ffffff"/>

        <ImageView
            android:id="@+id/ivRight"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_right_foreground" />

    </LinearLayout>

    <RadioGroup
        android:id="@+id/rgRoundTopic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        app:layout_constraintBottom_toTopOf="@+id/btnBackFromStartRound"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/rbFootballPlayers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/football_players"
            android:textColor="#ffffff"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/rbFootballClubs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/football_clubs"
            android:textColor="#ffffff" />

        <RadioButton
            android:id="@+id/rbNationalTeams"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/national_teams"
            android:textColor="#ffffff" />

    </RadioGroup>

    <TextView
        android:id="@+id/tvRoundTopic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/choose_round_topic"
        android:textColor="#ffffff"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/rgRoundTopic"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>