<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:background="#000000"
    android:padding="16dp">

    <TextView
        android:id="@+id/tvRank"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="8dp"
        android:layout_weight="1"
        android:background="@drawable/rounded_view_unselected"
        android:gravity="center"
        android:text="@string/three"
        android:fontFamily="@font/cronus_round"
        android:textColor="#000000"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/tvPlayerNameScore"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="8dp"
        android:layout_weight="4"
        android:background="@drawable/rounded_view_unselected"
        android:gravity="center_vertical"
        android:padding="8dp"
        android:text="@string/hello_world"
        android:fontFamily="@font/cronus_round"
        android:textColor="#000000"
        android:textSize="28sp" />

    <TextView
        android:id="@+id/tvLastRoundScore"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginEnd="8dp"
        android:layout_weight="1"
        android:background="@drawable/rounded_view_unselected"
        android:gravity="center"
        android:text="@string/two"
        android:fontFamily="@font/cronus_round"
        android:textColor="#000000"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/tvPoints"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@drawable/rounded_view_unselected"
        android:gravity="center"
        android:text="@string/eighteen"
        android:fontFamily="@font/cronus_round"
        android:textColor="#000000"
        android:textSize="36sp"
        android:textStyle="bold" />

</LinearLayout>