<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnStartGame"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:rotationX="0"
        android:text="@string/start_game"
        android:textSize="20sp"
        android:backgroundTint="#4e0707"
        app:layout_constraintBottom_toTopOf="@+id/btnHowToPlay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/btnHowToPlay"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:rotationX="0"
        android:text="@string/how_to_play"
        android:textSize="20sp"
        android:backgroundTint="#4e0707"
        app:layout_constraintBottom_toTopOf="@+id/btnCredits"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnStartGame" />

    <Button
        android:id="@+id/btnCredits"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:rotationX="0"
        android:text="@string/credits"
        android:textSize="20sp"
        android:backgroundTint="#4e0707"
        app:layout_constraintBottom_toTopOf="@+id/btnContact"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnHowToPlay" />

    <Button
        android:id="@+id/btnContact"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:rotationX="0"
        android:text="@string/contact"
        android:textSize="20sp"
        android:backgroundTint="#4e0707"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnCredits" />
</androidx.constraintlayout.widget.ConstraintLayout>