<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000">

    <TextView
        android:id="@+id/tvChoosePlayers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/choose_players"
        android:textSize="30sp"
        android:textColor="#ffffff"
        android:fontFamily="@font/cronus_italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvNPlayersChosen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/choose_players_hint"
        android:textSize="20sp"
        android:textColor="#4e0707"
        android:fontFamily="@font/cronus_round"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvChoosePlayers" />

    <Button
        android:id="@+id/btnBackFromStartGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="82dp"
        android:layout_marginEnd="74dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#4e0707"
        android:text="@string/back"
        android:textSize="20sp"
        android:textColor="#ffffff"
        android:fontFamily="@font/cronus_italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnNextFromStartGame"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnNextFromStartGame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="73dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="#4e0707"
        android:text="@string/next"
        android:textSize="20sp"
        android:textColor="#ffffff"
        android:fontFamily="@font/cronus_italic"
        android:clickable="false"
        android:focusable="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btnBackFromStartGame" />

    <EditText
        android:id="@+id/etAdd"
        android:layout_width="330dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="59dp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/add_player"
        android:textColor="#ffffff"
        android:textColorHint="#828282"
        app:layout_constraintBottom_toTopOf="@+id/btnBackFromStartGame"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints="" />

    <ImageView
        android:id="@+id/ivAdd"
        android:layout_width="52dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/hello_world"
        app:layout_constraintBottom_toBottomOf="@+id/etAdd"
        app:layout_constraintEnd_toEndOf="@+id/rvPlayers"
        app:layout_constraintStart_toEndOf="@+id/etAdd"
        app:layout_constraintTop_toTopOf="@+id/etAdd"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/ic_add_foreground" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvPlayers"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toTopOf="@+id/etAdd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNPlayersChosen" />

</androidx.constraintlayout.widget.ConstraintLayout>