<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000">

    <TextView
        android:id="@+id/tvSecret"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="0dp"
        android:background="#ffffff"
        android:gravity="center"
        android:text="@string/hello_world"
        android:textColor="#000000"
        android:textStyle="bold"
        android:textSize="24sp"
        android:fontFamily="@font/cronus_round"
        app:layout_constraintBottom_toBottomOf="@+id/ivScratch"
        app:layout_constraintEnd_toEndOf="@+id/ivScratch"
        app:layout_constraintStart_toStartOf="@+id/ivScratch"
        app:layout_constraintTop_toTopOf="@+id/ivScratch" />

    <ImageView
        android:id="@+id/ivScratch"
        android:layout_width="240dp"
        android:layout_height="240dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_scratch_foreground"
        android:contentDescription="@string/hello_world" />

    <TextView
        android:id="@+id/tvAboveImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:gravity="center"
        android:text="@string/above_image"
        android:textColor="#ffffff"
        android:textSize="28sp"
        android:fontFamily="@font/cronus_round"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnNextFromRevealingName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="72dp"
        android:layout_marginBottom="16dp"
        android:text="@string/next"
        android:textSize="20sp"
        android:textColor="#ffffff"
        android:fontFamily="@font/cronus_italic"
        android:backgroundTint="#4e0707"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnBackFromRevealingName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="72dp"
        android:layout_marginBottom="16dp"
        android:text="@string/back"
        android:textSize="20sp"
        android:textColor="#ffffff"
        android:fontFamily="@font/cronus_italic"
        android:backgroundTint="#4e0707"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvBelowImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/below_image"
        android:textColor="#ffffff"
        android:textSize="28sp"
        android:fontFamily="@font/cronus_round"
        app:layout_constraintBottom_toTopOf="@+id/btnNextFromRevealingName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSecret" />


</androidx.constraintlayout.widget.ConstraintLayout>