<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/glChoices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:columnCount="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rowCount="2"
        android:padding="16dp"
        app:useDefaultMargins="true">

        <TextView android:id="@+id/tvChoice0" android:layout_width="170dp" android:gravity="center" android:textColor="#000000"
            android:text="@string/hello_world" android:textSize="20sp" android:background="@drawable/rounded_view_unselected"
            android:layout_height="44dp" android:fontFamily="@font/cronus_round"/>
        <TextView android:id="@+id/tvChoice1" android:layout_width="170dp" android:gravity="center" android:textColor="#000000"
            android:text="@string/hello_world" android:textSize="20sp" android:background="@drawable/rounded_view_unselected"
            android:layout_height="44dp" android:fontFamily="@font/cronus_round"/>
        <TextView android:id="@+id/tvChoice2" android:layout_width="170dp" android:gravity="center" android:textColor="#000000"
            android:text="@string/hello_world" android:textSize="20sp" android:background="@drawable/rounded_view_unselected"
            android:layout_height="44dp" android:fontFamily="@font/cronus_round"/>
        <TextView android:id="@+id/tvChoice3" android:layout_width="170dp" android:gravity="center" android:textColor="#000000"
            android:text="@string/hello_world" android:textSize="20sp" android:background="@drawable/rounded_view_unselected"
            android:layout_height="44dp" android:fontFamily="@font/cronus_round"/>
        <TextView android:id="@+id/tvChoice4" android:layout_width="170dp" android:gravity="center" android:textColor="#000000"
            android:text="@string/hello_world" android:textSize="20sp" android:background="@drawable/rounded_view_unselected"
            android:layout_height="44dp" android:fontFamily="@font/cronus_round"/>
        <TextView android:id="@+id/tvChoice5" android:layout_width="170dp" android:gravity="center" android:textColor="#000000"
            android:text="@string/hello_world" android:textSize="20sp" android:background="@drawable/rounded_view_unselected"
            android:layout_height="44dp" android:fontFamily="@font/cronus_round"/>
        <TextView android:id="@+id/tvChoice6" android:layout_width="170dp" android:gravity="center" android:textColor="#000000"
            android:text="@string/hello_world" android:textSize="20sp" android:background="@drawable/rounded_view_unselected"
            android:layout_height="44dp" android:fontFamily="@font/cronus_round"/>
        <TextView android:id="@+id/tvChoice7" android:layout_width="170dp" android:gravity="center" android:textColor="#000000"
            android:text="@string/hello_world" android:textSize="20sp" android:background="@drawable/rounded_view_unselected"
            android:layout_height="44dp" android:fontFamily="@font/cronus_round"/>
        <TextView android:id="@+id/tvChoice8" android:layout_width="170dp" android:gravity="center" android:textColor="#000000"
            android:text="@string/hello_world" android:textSize="20sp" android:background="@drawable/rounded_view_unselected"
            android:layout_height="44dp" android:fontFamily="@font/cronus_round"/>
        <TextView android:id="@+id/tvChoice9" android:layout_width="170dp" android:gravity="center" android:textColor="#000000"
            android:text="@string/hello_world" android:textSize="20sp" android:background="@drawable/rounded_view_unselected"
            android:layout_height="44dp" android:fontFamily="@font/cronus_round"/>
        <TextView android:id="@+id/tvChoice10" android:layout_width="170dp" android:gravity="center" android:textColor="#000000"
            android:text="@string/hello_world" android:textSize="20sp" android:background="@drawable/rounded_view_unselected"
            android:layout_height="44dp" android:fontFamily="@font/cronus_round"/>
        <TextView android:id="@+id/tvChoice11" android:layout_width="170dp" android:gravity="center" android:textColor="#000000"
            android:text="@string/hello_world" android:textSize="20sp" android:background="@drawable/rounded_view_unselected"
            android:layout_height="44dp" android:fontFamily="@font/cronus_round"/>


    </androidx.gridlayout.widget.GridLayout>

    <Button
        android:id="@+id/btnNextFromGuessWord"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/next"
        android:textSize="20sp"
        android:textColor="#ffffff"
        android:fontFamily="@font/cronus_round"
        android:backgroundTint="#4e0707"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvAboveChoices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/above_choices"
        android:textColor="#ffffff"
        android:textSize="28sp"
        android:fontFamily="@font/cronus_round"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/glChoices"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvBelowChoices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/below_choices"
        android:textColor="#ffffff"
        android:textSize="28sp"
        android:fontFamily="@font/cronus_round"
        android:gravity="center"
        android:padding="16dp"
        app:layout_constraintBottom_toTopOf="@+id/btnNextFromGuessWord"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/glChoices" />
</androidx.constraintlayout.widget.ConstraintLayout>